src/snapshots/droid_tui__regression__visual_diff_changed_node_marker_snapshot@diff_changed_classic_40.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────┐
│      DROID: cable_banner_combos      │
└──────────────────────────────────────┘



┌Mixer─────────────────────────────────┐
│                                      │
│(unnamed)──────────╭contour───────────╮
│                   │    │             │
╭button─────────────◉╮─────┐           │
│                   ││   │ │           │
│                ┌──╰──────────────────╯
│                │   │   │ │           │
╰────────────────────╯   │ │           │
│                │       │ │           │
│────────────────│───────┘ │           │
│                │         │           │
│            ╭mixer*──────────────╮    │
│            │   │         │      │    │
│            ◉───┘         └──────●    │
│            │   │                │    │
│            ╰────────────────────╯    │
│                │                     │
│                │                     │
│                │                     │
│╭clocktool───────────╮                │
││               │    │                │
││               └────●                │
││                    │                │
│╰────────────────────╯                │
│                                      │
└──────────────────────────────────────┘




┌──────────────────────────────────────┐
│Loaded cable_banner_combos | latency a│
└──────────────────────────────────────┘
