src/snapshots/droid_tui__regression__visual_diff_changed_node_marker_snapshot@diff_changed_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                      ┌Mixer───────────────────────────────────────────────────┐                  │
└──────────────────────│────────────────────────────────────────────────────────│──────────────────┘
                       │                                 ╭contour─────────────╮ │
                       │                                 │                    │ │
                  ┌(unn│med)───────────────┐     ┌───────◉──────┐             │ │
                  │    │                   │     │       │      │             │ │
                  │ ╭button──────────────╮ │     │       ╰────────────────────╯ │
                  │ │  │                 │ │     │              │               │
                  │ │  │                 ●───┐───┘              │               │
                  │ │  │                 │ │ │                  │               │
                  │ ╰────────────────────╯ │ │                  │               │
                  │    │                   │ │                  │               │
                  └────│───────────────────┘ │                  │               │
                       │                     │                  │               │
                       │                     │                  │               │
                       │                     │                  │               │
                       │                     │                  │               │
                       │                     │                  │               │
                       │                     │    ╭mixer*──────────────╮        │
                       │                     │    │             │      │        │
                       │                     └────◉             └──────●        │
                       │                        │ │                    │        │
                       │                        │ ╰────────────────────╯        │
                       │                        │                               │
                       │                        │                               │
                       │                        │                               │
                       │                        │                               │
                       │                        │                               │
                       │                        │                               │
                       │                        │                               │
                       │                        │                               │
                       │ ╭clocktool───────────╮ │                               │
                       │ │                    │ │                               │
                       │ │                    ●─┘                               │
                       │ │                    │                                 │
                       │ ╰────────────────────╯                                 │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded cable_banner_combos | Renders degraded at 100 cols — use ≥ 36 cols or reduce scale | latenc│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
