src/snapshots/droid_tui__regression__visual_diff_changed_node_marker_snapshot@diff_changed_terminal_40.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────┐
│┌Mixer────────────────────────────────┐
└│─────────────────────────────────────│
┌│unnamed)────────────╭contour─────────╮
││                    │  │             │
╭button──────────────╮◉───────┐        │
││                   ││  │    │        │
││                 ┌─●╰────────────────╯
││                 │ │   │    │        │
╰────────────────────╯   │    │        │
││                 │     │    │        │
└│─────────────────│─────┘    │        │
 │                 │          │        │
 │               ╭mixer*──────────────╮│
 │               │ │          │       ││
 │               ◉─┘┐         └───────●│
 │               │  │                 ││
 │               ╰────────────────────╯│
 │                  │                  │
 │                  │                  │
 │ ╭clocktool───────────╮              │
 │ │                │   │              │
 │ │                └───●              │
 │ │                    │              │
 │ ╰────────────────────╯              │
 │                                     │
 └─────────────────────────────────────┘










┌──────────────────────────────────────┐
│Loaded cable_banner_combos | latency a│
└──────────────────────────────────────┘
